fixed product image height on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -415,7 +415,7 @@ section {
 
 @media only screen and (max-width: 800px) {
   .card-img-top {
-    height: 300px;
+    height: 100%;
   }
   .card-body {
     max-height: 1000px !important;
